Frontend documentation and frontend client naming changes
